{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 39,
  "lineage": "5bbc2b67-0644-9e90-c631-4cdc0880aff8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc995a23da39b9ba",
            "arn": "arn:aws:ec2:us-east-1:732745343988:instance/i-0edc4c3d93ad954d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edc4c3d93ad954d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "airflow",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d65c137432b2e57",
            "private_dns": "ip-10-0-1-136.ec2.internal",
            "private_ip": "10.0.1.136",
            "public_dns": "ec2-44-193-200-246.compute-1.amazonaws.com",
            "public_ip": "44.193.200.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 330,
                "throughput": 0,
                "volume_id": "vol-0c3072baac56f031f",
                "volume_size": 110,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e10dc04eeb4d808f",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "airflow-instance",
              "Owner": "airflow"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "airflow-instance",
              "Owner": "airflow"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04df3486a5027ff05"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:732745343988:internet-gateway/igw-0e7469a67c0ca4fa0",
            "id": "igw-0e7469a67c0ca4fa0",
            "owner_id": "732745343988",
            "tags": {
              "Name": "airflow-igw",
              "Owner": "airflow"
            },
            "tags_all": {
              "Name": "airflow-igw",
              "Owner": "airflow"
            },
            "vpc_id": "vpc-0176cce331bb0ea40"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:732745343988:route-table/rtb-0c224a15f0f76d894",
            "id": "rtb-0c224a15f0f76d894",
            "owner_id": "732745343988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7469a67c0ca4fa0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "airflow-rt",
              "Owner": "airflow"
            },
            "tags_all": {
              "Name": "airflow-rt",
              "Owner": "airflow"
            },
            "vpc_id": "vpc-0176cce331bb0ea40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f2b7b796f3dd119",
            "route_table_id": "rtb-0c224a15f0f76d894",
            "subnet_id": "subnet-0e10dc04eeb4d808f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:732745343988:security-group/sg-04df3486a5027ff05",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04df3486a5027ff05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "My public IP",
                "from_port": 433,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "airflow-sg",
            "name_prefix": "",
            "owner_id": "732745343988",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airflow-sg",
              "Owner": "airflow"
            },
            "tags_all": {
              "Name": "airflow-sg",
              "Owner": "airflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0176cce331bb0ea40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:732745343988:subnet/subnet-0e10dc04eeb4d808f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e10dc04eeb4d808f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732745343988",
            "tags": {
              "Name": "airflow-subnet",
              "Owner": "airflow"
            },
            "tags_all": {
              "Name": "airflow-subnet",
              "Owner": "airflow"
            },
            "vpc_id": "vpc-0176cce331bb0ea40"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:732745343988:vpc/vpc-0176cce331bb0ea40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d294c7cccba905df",
            "default_route_table_id": "rtb-0495de47f1cb70287",
            "default_security_group_id": "sg-0075feaef8b78cdf0",
            "dhcp_options_id": "dopt-7feee61d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0176cce331bb0ea40",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0495de47f1cb70287",
            "owner_id": "732745343988",
            "tags": {
              "Name": "airflow-vpc",
              "Owner": "airflow"
            },
            "tags_all": {
              "Name": "airflow-vpc",
              "Owner": "airflow"
            }
          }
        }
      ]
    }
  ]
}